updated front-end for a site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Natalia's Project Home Page</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -20,13 +20,13 @@
     <link href="/css/style.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
     <!-- Scripts -->
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
   
     <script src="/js/parallax.js"></script>
 </head>
@@ -97,8 +97,10 @@
 
                     <div class="about col-md-12 row" id="about">
                         <div class="wrap-about col-sm-12 col-md-12 col-xl-12">
-                            <h2 class="about-title" class="elegantshadow">About</h2>
-                            <p class="about-par">Hey there! I'm Natalia. I like all shades of purple, flowers, good food, and books. I am striving to become an amazing designer. Each day is a great opportunity to learn something new. Want to collaborate on a project? Send me a message. </p>
+														<h2 class="about-title">About</h2>
+														<div class="about-par">
+                            	<p class="circle1"> Web Developer <br> Designer <br> Artist <br> Foodie <br> Lifelong Learner </p>
+														</div>
                         </div>
 
                         <div class="wrap-contact-form col-sm-12 col-md-12 col-xl-12">
